Fixed styling/alignment in EditProfileModal. Fixed Remove photo button bug
Former-commit-id: 804610521c1a8ef3a68fd8b90884e13a4faaa15c [formerly c75285f8652e8f6b2a879d2b7e89ed80ab8b7f9a] [formerly 3c209341c9b28d9fabc2a5d96bec05c10eaddfea [formerly c1a18827ad1105e91b0d7a8cc0e7ca4a96dd7a8b [formerly b580e3a2a894f9144aa63c06d834ad407ea63d27] [formerly 43fb577c8c769b65dac6a488d06507c1cad7dd5d]]]
Former-commit-id: cf15a8f5fa34427f07b5de21be408f4ea0a2ca65 [formerly c1a18827ad1105e91b0d7a8cc0e7ca4a96dd7a8b [formerly b580e3a2a894f9144aa63c06d834ad407ea63d27]]
Former-commit-id: 699662994bcb1fba6b3b7171f08a106e9614470f
Former-commit-id: 9eba741f70fd1b493d4b2123a706c8440cf7bdce
Former-commit-id: 104ab1638040a6d0b72ed7bbd967951cfc91f68c

--- a/topbar/src/styles/ProfileModal.module.css
+++ b/topbar/src/styles/ProfileModal.module.css
@@ -246,7 +246,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 1.5rem;
+  padding: 15px 2.4rem;
   font-family: "Lato", sans-serif;
   color: #fff;
   font-weight: 700;
